feat(airlines): use WT_SEGMENTS to allow running wt-read-api instance with multiple segments support
